Fix video player default to fullscreen on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -36,6 +36,12 @@
   font-size: 100px;
 }
 
+@media screen and (max-width: 960px) {
+  .challenges {
+    font-size: 60px;
+  }
+}
+
 .discuss {
   background-image: url("https://diegobajetti.github.io/seg3125_p2.github.io/images/img-3.jpg");
   background-position: center;
